# x-cli

./: .editorconfig  .gitattributes  .markdownlint.jsonc  .yamllint.yaml  LLMs.md  README.md  TODO.md  pyproject.toml  ruff.toml
src/x_cli/: agentic.py  api.py  auth.py  cli.py  errors.py  formatters.py  utils.py
tests/: test_api.py  test_auth.py  test_cli.py  test_formatters.py  test_media.py  test_utils.py
